# comissoes

./: .gitignore  README.md  app.py  investigate.py  main.py  pyproject.toml  requirements.txt
commission_tool/: __init__.py  config.py
commission_tool/core/: __init__.py  apuracao.py  calculator.py  eligibility.py  formatting.py  incentives.py  model_rules.py  paid_audit.py  periods.py  reports.py
commission_tool/data/: __init__.py  pipeline.py
commission_tool/data/sources/: __init__.py  postgres.py  sqlserver.py
commission_tool/io/: __init__.py  excel.py  pdf.py
commission_tool/ui/: app.py
docs/: commission_tool_spec.md  regras_calculo.md  regras_configuracao_modelos.md  regras_extracao.md  regras_postgres.md  regras_validacao_pagamento.md
scripts/: inspect_sqlserver_schema.py
tests/: test_app_machine_selection.py  test_apuracao.py  test_eligibility.py  test_formatting.py  test_incentives.py  test_paid_audit.py  test_pdf.py  test_periods.py  test_postgres_mapping.py  test_reports.py  test_sqlserver_machine_query.py
